more coq code in completeness section

--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -22,6 +22,9 @@
 	 	\bibitem{bolton2011systematic}
 	 	Bolton, M.; Bass, E.; Siminiceanu, R. A systematic approach to model checking human--automation interaction using task-analytic models. \emph{Systems, Man, and Cybernetics: Systems and Humans, IEEE Transactions on} (Vol 41, No. 5, pp.961-976). 2011. IEEE.
 	 	
+	 	\bibitem{Boolos}
+	 	Boolos, G. The Logic of Provability. Cambridge University Press. New York and Cambridge, 1993.
+	 	
 	 	\bibitem{coq_ref}
 	 	Barras, B.; Boutin, S.; Cornes, C.; Courant, J.; Filliatre, J.C.; Gimenez, E.; Herbelin, H.; Huet, G.; Munoz, C.; Murthy, C. and Parent, C. The Coq proof assistant reference manual: Version 6.1 (Doctoral dissertation, Inria). 1997.
 	 	
