--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -920,7 +920,7 @@ For completeness, it suffices to show that each static \DASL\ axiom schema is a 
 %	\end{center}
 %\end{table}
 
-We mechanize this in Coq with the following $\mathtt{Definition}$ of \DASL\ axiom schemas.
+We can represent a theory of modal logic as a list of axiom schemas, and represent \DASL\ in particular as the following list.
 
 \begin{tcolorbox}
 		\begin{lstlisting}[language=Coq]
@@ -936,7 +936,20 @@ We mechanize this in Coq with the following $\mathtt{Definition}$ of \DASL\ axio
 	\end{lstlisting}
 \end{tcolorbox}
 
-With this formulation of \DASL, we can iterate over each schema and prove that it is a Sahlqvist implication, which we do in the following $\mathtt{Theorem}$:
+We define a function over lists of axiom schemas to determine whether each schema is a Sahlqvist implication.
+
+\begin{tcolorbox}
+	\begin{lstlisting}[language=Coq]
+	Fixpoint Complete_via_Sahlqvist (l : list formula) : Prop :=  
+	match l with
+	| nil => True
+	| (l' :: els) => sahlqvist_formula (l') /\ 
+	Complete_via_Sahlqvist (els)
+	end.
+	\end{lstlisting}
+\end{tcolorbox}
+
+Then we prove that \DASL\ is complete by calling $\mathtt{Complete\_via\_Sahlqvist}$ on its representative list of axiom schemas.
 
 \begin{tcolorbox}
 	\begin{lstlisting}[language=Coq]
@@ -945,18 +958,71 @@ Theorem DASL_Axioms_Complete : forall (p q r : prop) (a : DASL.Agents),
 	\end{lstlisting}
 \end{tcolorbox}
 
-The above theorem makes use of the following function,
+Of course, this theorem is not in the expected form of $\models \varphi \timplies \vDash \varphi$, and in fact we have only mechanized the proof that \DASL\ is complete with respect to \emph{some} set of frame relations. To show that \DASL\ is complete with respect to the very same relations as those for which we proved soundness, we must appeal to a theorem that we have not mechanized, presented in Blackburn \etal\cite{modal}. In it, they present the theorem,
+
+\begin{theorem}[Correspondence of Sahlqvist Formula to First Order Relation]\label{thm:correspondence}
+	Let $\chi$ be a Sahqvist formula. $\chi$ corresponds to exactly one first order relation $c_\chi(x)$ that defines a class of frames, and $c_\chi(x)$ is effectively computable from $\chi$ using the Sahlqvist-van Benthem Algorithm.
+\end{theorem}
+\begin{proof}
+	See \cite{modal} chapter 3.
+\end{proof}
+
+Since $c_\chi(x)$ defines the frame, $\chi$ is valid for that class of frames. So, by our proof of soundess where we show that the corresponding modal formulas are sound for their corresponding first order frame conditions, we can infer that these are the frame conditions for which the \DASL\ axioms are complete via the Sahlqvist theorem (\ref{thm:sahlqvist}). We leave the mechanization of these steps to future work.
+
+To help validate our mechanization of the $\mathtt{sahlqvist\_formula}$ function in Coq, we run it against some modal formulas whose status as Sahlqvist formulas, in the positive and negative cases, is known.
+
+L\'ob's formula $\Box(\Box \varphi \iimplies \varphi) \iimplies \Box \varphi$, the characteristic axiom of provability logic, is not a Sahlqvist formula, and lacks a first order correspondent\cite{Boolos}.
+
+To remain in the mechanized axiom schema logic we've produced in Coq, we use the knowledge operator as the $\Box$ operator of the formula, and prove:
 
 \begin{tcolorbox}
 	\begin{lstlisting}[language=Coq]
-	Fixpoint Complete_via_Sahlqvist (l : list formula) : Prop :=  
-		match l with
-			| nil => True
-			| (l' :: els) => sahlqvist_formula (l') /\ 
-				Complete_via_Sahlqvist (els)
-		end.
+	Example Lob_not_sahlqvist : forall (phi : prop) (a : DASL.Agents),
+		not sahlqvist_formula (
+			FK a (FK a (FProp phi) =f=> (FProp phi)) =f=> FK a (FProp phi)
+		).
+	Proof.
+	intros. unfold not. not_sahlqvist. 
+	Qed.
 	\end{lstlisting}
 \end{tcolorbox}
+
+It makes use of a custom tactic we use in the Coq file.
+
+\begin{tcolorbox}
+	\begin{lstlisting}[language=Coq]
+	Ltac not_sahlqvist := 
+		try (unfold sahlqvist_formula; 
+			  unfold sahlqvist_implication; 
+			  simpl; intuition).
+	\end{lstlisting}
+\end{tcolorbox}
+
+We define a similar tactic for verifying that formulas are Sahlqvist formulas.
+
+\begin{tcolorbox}
+	\begin{lstlisting}[language=Coq]
+	Ltac sahlqvist_reduce := 
+	simpl; try (unfold sahlqvist_implication; split);
+	try (unfold positive_formula; simpl; intuition);
+	try (unfold sahlqvist_antecedent; simpl; intuition; unfold normal_form).
+	\end{lstlisting}
+\end{tcolorbox}
+
+We make use of this tactic in, for example,
+
+\begin{tcolorbox}
+	\begin{lstlisting}[language=Coq]
+	Lemma B_5_is_sahlqvist : forall (phi : prop) (a : DASL.Agents),
+	sahlqvist_formula (\ (FB a (\ FB a (FProp phi))) =f=> (FB a (FProp phi))).
+	Proof.
+		intros; sahlqvist_reduce. 
+	Qed.
+	\end{lstlisting}
+\end{tcolorbox}
+
+We prove that each of the modal axioms schemas of \DASL\ are Sahlqvist formulas using the above techniques, which can be seen in the appendix.
+
 %OLD BELOW
 %
 %\begin{tcolorbox}
