fill in completeness discussion; add detail to formal methods tools background

--- a/Chapter_02.tex
+++ b/Chapter_02.tex
@@ -429,9 +429,16 @@ We are concerned with an additional element: the \emph{safety} status of an acti
 
 \section{Formal Methods Tools}~\label{sec:fm}
 
-This section describes the Coq Proof Assistant \cite{coq_ref} and the Z3 SMT Solver that this dissertation makes use of. We use Coq to mechanically check our metatheory proofs of soundness and completeness, and our object theory proofs about safety-critical information flow. We use the Z3 SMT Solver to automatically infer missing safety-critical information based on an unsafe input action. This serves as a proof of concept for potential safety-critical information monitors that make use of \DASL\ as their foundation.
+This section describes the Coq Proof Assistant \cite{coq_ref} and the Z3 Theorem Prover \cite{z3} that this dissertation makes use of. We use Coq to mechanically check our metatheory proofs of soundness and completeness, and our object theory proofs about safety-critical information flow. We use the Z3 Theorem Prover's capacity as a SMT solver to automatically infer missing safety-critical information based on an unsafe input action. This serves as a proof of concept for potential safety-critical information monitors that make use of \DASL\ as their foundation.
+
+The Coq Proof Assistant is a combination of a dependently-typed functional programming language and a language of tactics for partially automating proof verification. Coq supports compilation to Haskell and OCaml, which is convenient because one can write a program and verify its correctness in Coq, then compile the code to a nicer implementation language. This dissertation does not take advantage of that feature. Instead, we embed \DASL\ in Coq and use it as a proof checker that allows us to write recursive functions and proof-automating tactics. This represents a second use case of formal verification tools that one does not often see in the philosophy, mathematics, or logic departments of academia. Coq becomes a tool for us to use to increase the rigor of our research. Many who have ventured into the realm of mechanical theorem proving have been surprised initially by how complicated proofs `by routine induction' can become once all of the details must be spelled out.
+
+We use Z3 in the same way. As a tool, it is a collection of symbolic reasoning engines, including simplex, rewriting, DPLL, superposition, Euclidean solver, and others.\footnote{Presentation by Dr. Leonardo DeMoura, ``From Z3 to Lean: Efficient Verification} We use it to validate that one can encode an instrument reading configuration and a safety precondition for an input action, and automatically detect whether the safety precondition is satisfied by the instrument readings. This validates an important requirement for implementing tools based on \DASL. 
+
 %The field of formal methods grew out of attempts to verify the correctness of hardware and software. It was normally confined to systems deemed mission- or safety-critical, due to its high cost. Arguments for the use of formal methods normally involve an anecdote in which a system fails due to some sort of error missed by traditional testing methods but that would have been caught and prevented were formal methods used.
+
 %Formal methods increase confidence that hardware and software components function correctly~\cite{RushbyFMbook}. They involve the application of mathematical techniques to the design and analysis of systems, usually the safety-critical components~\cite{johnson_butler_fm}. A standard approach is to develop an abstract specification of the software or hardware system, design the system to meet those specifications, and then use formal logic to prove that the designed system meets the desired safety specifications. 
+
 
 %According to the Federal Aviation Administration (FAA), one of the top 12 causes of mistakes in the aviation workplace is a lack of awareness~\cite{faa}. According to Boeing and the FAA, approximately 80 per cent of aviation accidents (including maintenance accidents) are due to human error~\cite{boeing,faaHF}. To increase safety in human factors, the industry relies on education, psychology, anthropometrics, safety engineering, and to a limited extent, computer science. The primary focus of computer science research regarding human factors is the design and testing of software systems that are easy and intuitive for humans to interact with. 
 
