--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -745,68 +745,77 @@ We denote the $\mathtt{theorem}$ type judgment with $\mathtt{|--}$.
 The proof can be found in the appendix.
 
 \subsection{Completeness}~\label{sec:completeness}
-For completeness, our proof depends on the notion of a Sahlqvist formula, which itself depends on more foundational properties of modal formulas, which we must also define. 
+For completeness, our proof depends on the notion of a Sahlqvist formula, which itself depends on syntactical properties of modal formulas, which we must also define. 
 
-A \emph{Sahlqvist formula} is a formula with a \emph{Sahlqvist antecedent} and a \emph{positive consequent}.
+A \emph{Sahlqvist implication} is a formula with a \emph{Sahlqvist antecedent} and a \emph{positive consequent}.
 
 A formula is \emph{positive} if all of its propositional letters are in the scope of an even number of negation signs. A formula is \emph{negative} if one or more of its propositional letters are in the scope of an odd number of negation signs.
 
 A \emph{Sahlqvist antecedent} is a formula built from $a)$ propositional letters prefixed by $n\geq0$ $\Box$'s and $b)$ negative formulas, $c)$ using only $\tlor$, $\tland$, and $\Diamond$ to build the antecedent from $(a)$ and $(b)$ components.
 
-To define these notions and reason about axiom schemas rather than actual well-formed formulas of the language, we define an inductive type in Coq that more closely resembles the formula schemas one typically uses when discussing a logic, as in $\Kns{i}\varphi \iimplies \varphi$, where $\varphi$ is a metalanguage variable standing in for any well-formed formula of the language. Because our inductive Coq type for well-formed formulas of the language is $\mathtt{prop}$, we must create an inductive type that takes $\mathtt{prop}$ as basic.
+To define these notions and reason about axiom schemas rather than actual well-formed formulas of the object language, we define an inductive type in Coq that more closely resembles the formula schemas one typically uses when discussing a logic, as in $\Kns{i}\varphi \iimplies \varphi$, where $\varphi$ is a metalanguage variable standing in for any well-formed formula of the language. Because our inductive Coq type for well-formed formulas of the language is $\mathtt{prop}$, we must create an inductive type that takes $\mathtt{prop}$ as basic.
 
 \begin{tcolorbox}
 	\begin{lstlisting}[language=Coq]
- Inductive formula : Type :=
-	| FProp : prop -> formula
-	| FAnd : formula -> formula -> formula
-	| FOr : formula -> formula -> formula
-	| FImp : formula -> formula -> formula
-	| FNeg : formula -> formula
-	| FK : DASL.Agents -> formula -> formula
-	| FB : DASL.Agents -> formula -> formula.
+ Inductive schema : Type :=
+	| SProp : prop -> schema
+	| SAnd : schema -> schema -> schema
+	| SOr : schema -> schema -> schema
+	| SImp : schema -> schema -> schema
+	| SNeg : schema -> schema
+	| SK : DASL.Agents -> schema -> schema
+	| SB : DASL.Agents -> schema -> schema.
 	\end{lstlisting}	
 	
 \end{tcolorbox}
+We use the following notation symbols.
 
-We define a $\mathtt{negative}$ formula as follows.
+\begin{tcolorbox}
+	\begin{lstlisting}[language=Coq]
+Notation ``\ p" := (SNeg p) (at level 70, right associativity).
+Infix ``=s=>" := SImp (right associativity, at level 85).
+Infix ``|s|" := SOr (right associativity, at level 75).
+Infix ``&s&" := SAnd (right associativity, at level 75).
+	\end{lstlisting}
+\end{tcolorbox}
+We define a $\mathtt{negative}$ formula as one whose proposition letters are all under the scope of an odd number of negation signs.
 
 \begin{tcolorbox}
 	\begin{lstlisting}[language=Coq]
 	
-	Fixpoint negative_formula (phi : formula) : Prop :=
+	Fixpoint negative_formula (phi : schema) : Prop :=
 		match phi with
-			| FProp p => False
-			| FAnd phi1 phi2 => (negative_formula phi1) 
+			| SProp p => False
+			| SAnd phi1 phi2 => (negative_formula phi1) 
 				/\ (negative_formula phi2)
-			| FOr phi1 phi2 => (negative_formula phi1) 
+			| SOr phi1 phi2 => (negative_formula phi1) 
 				/\ (negative_formula phi2)
-			| FImp phi1 phi2 => (negative_formula phi1) 
+			| SImp phi1 phi2 => (negative_formula phi1) 
 				/\ (negative_formula phi2)
-			| FNeg phi' => not (negative_formula phi')
-			| FK a phi' => negative_formula phi'
-			| FB a phi' => negative_formula phi'
+			| SNeg phi' => not (negative_formula phi')
+			| SK a phi' => negative_formula phi'
+			| SB a phi' => negative_formula phi'
 		end.
 	\end{lstlisting}	
 	
 \end{tcolorbox}
 
-We define a $\mathtt{positive}$ formula as the oppositve of a $\mathtt{negative}$ formula.
+We define a $\mathtt{positive}$ formula appropriately as one whose proposition letters are all under the scope of an even number of negation signs..
 
 \begin{tcolorbox}
 	\begin{lstlisting}[language=Coq]
-	Fixpoint positive_formula (phi : formula) : Prop :=
+	Fixpoint positive_formula (phi : schema) : Prop :=
 		match phi with
-			| FProp p => True
-			| FAnd phi1 phi2 => (positive_formula phi1) 
+			| SProp p => True
+			| SAnd phi1 phi2 => (positive_formula phi1) 
 				/\ (positive_formula phi2)
-			| FOr phi1 phi2 => (positive_formula phi1)
+			| SOr phi1 phi2 => (positive_formula phi1)
 				 /\ (positive_formula phi2)
-			| FImp phi1 phi2 => (positive_formula phi1)
+			| SImp phi1 phi2 => (positive_formula phi1)
 				 /\ (positive_formula phi2)
-			| FNeg phi' => not (positive_formula phi')
-			| FK a phi' => positive_formula phi'
-			| FB a phi' => positive_formula phi'
+			| SNeg phi' => not (positive_formula phi')
+			| SK a phi' => positive_formula phi'
+			| SB a phi' => positive_formula phi'
 		end.
 	\end{lstlisting}	
 	
@@ -816,15 +825,15 @@ To construct Sahlqvist antecedents, we define the notions of a $\mathtt{boxed}$ 
 
 \begin{tcolorbox}
 	\begin{lstlisting}[language=Coq]
-Fixpoint boxed_formula (phi : formula) : Prop :=
+Fixpoint boxed_formula (phi : schema) : Prop :=
 	match phi with
-		| FProp p => True
-		| FAnd phi1 phi2 => False
-		| FOr phi1 phi2 => False
-		| FImp phi1 phi2 => False
-		| FNeg phi' => False
-		| FK a phi' => boxed_formula phi'
-		| FB a phi' => boxed_formula phi'
+		| SProp p => True
+		| SAnd phi1 phi2 => False
+		| SOr phi1 phi2 => False
+		| SImp phi1 phi2 => False
+		| SNeg phi' => False
+		| SK a phi' => boxed_formula phi'
+		| SB a phi' => boxed_formula phi'
 	end.
 	\end{lstlisting}	
 	
@@ -836,23 +845,23 @@ A $\mathtt{s\_a\_component}$ is a formula schema built up of $\mathtt{boxed\_for
 
 \begin{tcolorbox}
 	\begin{lstlisting}[language=Coq]
-Fixpoint s_a_component (phi : formula) : Prop :=
+Fixpoint s_a_component (phi : schema) : Prop :=
 	match phi with
-		| FProp p => True
-		| FAnd phi1 phi2 => (s_a_component phi1) /\ (s_a_component phi2)
-		| FOr phi1 phi2 => (s_a_component phi1) /\ (s_a_component phi2)
-		| FImp phi1 phi2 => not (s_a_component phi1) /\ (s_a_component phi2)
-		| FNeg phi' => match phi' with
-			| FProp p => True
-			| FAnd p1 p2 => positive_formula p1 /\ positive_formula p2
-			| FOr p1 p2 => positive_formula p1 /\ positive_formula p2
-			| FImp p1 p2 => negative_formula p1 /\ positive_formula p2
-			| FNeg p' => s_a_component p'
-			| FK a p' => not (s_a_component p')
-			| FB a p' => not (s_a_component p')
+		| SProp p => True
+		| SAnd phi1 phi2 => (s_a_component phi1) /\ (s_a_component phi2)
+		| SOr phi1 phi2 => (s_a_component phi1) /\ (s_a_component phi2)
+		| SImp phi1 phi2 => not (s_a_component phi1) /\ (s_a_component phi2)
+		| SNeg phi' => match phi' with
+			| SProp p => True
+			| SAnd p1 p2 => positive_formula p1 /\ positive_formula p2
+			| SOr p1 p2 => positive_formula p1 /\ positive_formula p2
+			| SImp p1 p2 => negative_formula p1 /\ positive_formula p2
+			| SNeg p' => s_a_component p'
+			| SK a p' => not (s_a_component p')
+			| SB a p' => not (s_a_component p')
 		end
-		| FK a phi' => boxed_formula phi'
-		| FB a phi' => boxed_formula phi'
+		| SK a phi' => boxed_formula phi'
+		| SB a phi' => boxed_formula phi'
 	end.
 	\end{lstlisting}	
 	
@@ -862,31 +871,50 @@ Next, we define what it is for a subformula to be a Sahlqvist antecedent.
 
 \begin{tcolorbox}
 \begin{lstlisting}[language=Coq]
-Fixpoint sahlqvist_antecedent (phi : formula) : Prop :=
+Fixpoint sahlqvist_antecedent (phi : schema) : Prop :=
 	s_a_component (normal_form phi).
 \end{lstlisting}
 \end{tcolorbox}
 
-We combine the above components to define what is is for a formula to be a Sahlqvist implication.
+We combine the above components to define what it is for a formula to be a Sahlqvist implication.
 
 \begin{tcolorbox}
 	\begin{lstlisting}[language=Coq]
-
-Fixpoint sahlqvist_formula (phi : formula) : Prop :=
-	match phi with
-		| FProp phi'=> True
-		| FAnd phi1 phi2 => (sahlqvist_antecedent phi1) 
-			/\ (sahlqvist_antecedent phi2)
-		| FOr phi1 phi2 => not (sahlqvist_antecedent phi1) 
-			/\ (positive_formula phi2)
-		| FImp phi1 phi2 => (sahlqvist_antecedent phi1) 
-			/\ (positive_formula (normal_form phi2))
-		| FNeg phi' => sahlqvist_antecedent phi'
-		| FK a phi' => boxed_formula phi'
-		| FB a phi' => boxed_formula phi'
-	end.
+Definition sahlqvist_implication (phi psi : schema) : Prop :=
+	sahlqvist_antecedent (phi) /\ positive_formula (psi).
 
 \end{lstlisting}
+\end{tcolorbox}
+
+According to Blackburn \etal\cite{modal}, a Sahlqvist formula is built up from ``Sahlqvist implications by freely applying boxes and conjunctions, and by applying disjunctions only between formulas that do not share any proposition letters." So we must define a function that parses implications to identify when a proposition letter appears in both antecedent and consequent. We do that with the following in Coq.
+
+\begin{tcolorbox}
+	\begin{lstlisting}[language=Coq]
+	Fixpoint share_prop_letter (phi psi : schema) {struct phi} : Prop :=
+		match phi with
+		| SProp phi' => match psi with
+			| SProp psi' => phi' = psi'
+			| SAnd psi1 psi2 => (prop_in_schema phi' psi1)
+			 	\/ (prop_in_schema phi' psi2)
+			| SOr psi1 psi2 => (prop_in_schema phi' psi1) 
+				\/ (prop_in_schema phi' psi2)
+			| SImp psi1 psi2 => (prop_in_schema phi' psi1) 
+				\/ (prop_in_schema phi' psi2)
+			| SNeg psi' => (prop_in_schema phi' psi')
+			| SK a psi' => (prop_in_schema phi' psi')
+			| SB a psi' => (prop_in_schema phi' psi')
+			end
+		| SAnd phi1 phi2 => (share_prop_letter phi1 psi) 
+			\/ (share_prop_letter phi2 psi)
+		| SOr phi1 phi2 => (share_prop_letter phi1 psi) 
+			\/ (share_prop_letter phi2 psi)
+		| SImp phi1 phi2 => (share_prop_letter phi1 psi) 
+			\/ (share_prop_letter phi2 psi)
+		| SNeg phi' => (share_prop_letter phi' psi)
+		| SK a phi' => (share_prop_letter phi' psi)
+		| SB a phi' => (share_prop_letter phi' psi)
+		end.
+	\end{lstlisting}
 \end{tcolorbox}
 
 To prove that \DASL\ is complete, we use the following theorem, which we have not mechanized in Coq.
@@ -925,13 +953,13 @@ We can represent a theory of modal logic as a list of axiom schemas, and represe
 \begin{tcolorbox}
 		\begin{lstlisting}[language=Coq]
 	Definition DASL_Axioms (p q r : prop) (a : DASL.Agents) := 
-	(FK a (FProp p) =f=> FK a ((FProp p) =f=> (FProp q)) =f=> FK a (FProp q))
-	:: (FK a (FProp p) =f=> (FProp p))
-	:: (FB a (FProp p) =f=> FB a ((FProp p) =f=> (FProp q)) =f=> FB a (FProp q))
-	:: (FB a (FProp p) =f=> \ (FB a (\ (FProp p))))
-	:: (\ (FB a (\ (FB a (FProp p)))) =f=> FB a (FProp p))
-	:: (FK a (FProp p) =f=> FB a (FProp p))
-	:: (FB a (FProp p) =f=> FB a (FK a (FProp p)))
+	(SK a (SProp p) =s=> SK a ((SProp p) =s=> (SProp q)) =s=> SK a (SProp q))
+	:: (SK a (SProp p) =s=> (SProp p))
+	:: (SB a (SProp p) =s=> SB a ((SProp p) =s=> (SProp q)) =s=> SB a (SProp q))
+	:: (SB a (SProp p) =s=> \ (SB a (\ (SProp p))))
+	:: (\ (SB a (\ (SB a (SProp p)))) =s=> SB a (SProp p))
+	:: (SK a (SProp p) =s=> SB a (SProp p))
+	:: (SB a (SProp p) =s=> SB a (SK a (SProp p)))
 	:: nil.
 	\end{lstlisting}
 \end{tcolorbox}
@@ -979,7 +1007,7 @@ To remain in the mechanized axiom schema logic we've produced in Coq, we use the
 	\begin{lstlisting}[language=Coq]
 	Example Lob_not_sahlqvist : forall (phi : prop) (a : DASL.Agents),
 		not sahlqvist_formula (
-			FK a (FK a (FProp phi) =f=> (FProp phi)) =f=> FK a (FProp phi)
+			SK a (SK a (SProp phi) =s=> (SProp phi)) =s=> SK a (SProp phi)
 		).
 	Proof.
 	intros. unfold not. not_sahlqvist. 
@@ -1014,15 +1042,45 @@ We make use of this tactic in, for example,
 \begin{tcolorbox}
 	\begin{lstlisting}[language=Coq]
 	Lemma B_5_is_sahlqvist : forall (phi : prop) (a : DASL.Agents),
-	sahlqvist_formula (\ (FB a (\ FB a (FProp phi))) =f=> (FB a (FProp phi))).
+	sahlqvist_formula (\ (SB a (\ SB a (SProp phi))) =s=> (SB a (SProp phi))).
 	Proof.
 		intros; sahlqvist_reduce. 
 	Qed.
 	\end{lstlisting}
 \end{tcolorbox}
 
-We prove that each of the modal axioms schemas of \DASL\ are Sahlqvist formulas using the above techniques, which can be seen in the appendix.
+We prove that each of the modal axioms schemas of \DASL\ are Sahlqvist formulas using the above techniques, which can be seen in the appendix. Another example Sahlqvist formula that we prove is the Church-Rosser formula, $\Diamond\Box\varphi \iimplies \Box\Diamond\varphi$, again using the knowledge operator:
 
+\begin{tcolorbox}
+	\begin{lstlisting}[language=Coq]
+Example Church_Rosser_is_sahlqvist : forall (phi : prop) (a : DASL.Agents),
+	sahlqvist_formula (
+		\ (SK a (\ 
+			(SK a (SProp phi)))) =s=> 
+			(SK a (\ (SK a (\ (SProp phi)))))).
+Proof.
+	intros; sahlqvist_reduce.
+Qed.
+	\end{lstlisting}
+\end{tcolorbox}
+
+However, if one rearranges the $\Diamond$ and $\Box$ in Church-Rosser, this yields its converse, the McKinsey formula, which is not a Sahlqvist formula: $\Box\Diamond\varphi \iimplies \Diamond \Box \varphi$, and we likewise can prove this.
+
+\begin{tcolorbox}
+	\begin{lstlisting}[language=Coq]
+Example McKinsey_not_sahlqvist : forall (phi : prop) (a : DASL.Agents),
+	not sahlqvist_formula (
+		SK a (\ (SK a (\ (SProp phi)))) =s=> 
+		\ (SK a (\ (SK a (SProp phi))))).
+Proof.
+	intros; not_sahlqvist.  
+Qed.
+	\end{lstlisting}
+\end{tcolorbox}
+
+The sharp-eyed reader might notice that we have not defined the $\mathtt{prop}$ type that appears in the above Coq formulas. Our mechanization of \DASL\ consists in two levels. The top level is that of the axiom schema, which allows us to prove theorems about the logic using a metavariable for propositions, just as one sees logicians do in papers. The metavariable represents propositions in the object language, which bottoms out in atomic propositions about airplane instruments in this case. With this architecture, one could define alternative object languages in Coq for different domains, perhaps one for driving automobiles, one for power plant operators, and one for submarine operators. Each of these domains involves well-structured relationships between the instrument readings and the actions' safety status, but each concerns different atomic propositions. However, the top level metalanguage remains the same.
+
+Our mechanization of $\mathtt{prop}$ is discussed in the following chapter, where we present aviation mishap case studies mechanized in the object language.
 %OLD BELOW
 %
 %\begin{tcolorbox}
